# securityonion-examples

./: .gitignore  CLAUDE.md  README.md
shallot/backend/: .coveragerc  Dockerfile.test  README-ASYNC-FIX.md  README-FIXTURES-FIX.md  README-PYTHON313-FIX.md  README-TESTING.md  README.md  clean_async_tests.py  example-fixed-test.py  fix_async_tests.py  fix_test_fixtures.py  pyproject.toml  run-full-coverage.sh  run-tests-docker.sh
shallot/backend/src/app/: config.py  database.py  main.py  py.typed
shallot/backend/src/app/api/: __init__.py  auth.py  chat_users.py  docs.py  health.py  matrix.py  settings.py  users.py
shallot/backend/src/app/api/commands/: __init__.py  ack.py  alerts.py  core.py  detections.py  dig.py  escalate.py  help.py  hunt.py  (+4 more)
shallot/backend/src/app/core/: __init__.py  chat_manager.py  chat_services.py  decorators.py  default_settings.py  discord.py  logging.py  matrix.py  permissions.py  security.py  securityonion.py  slack.py
shallot/backend/src/app/models/: __init__.py  chat_users.py  settings.py  users.py
shallot/backend/src/app/schemas/: __init__.py  chat_users.py  commands.py  settings.py  users.py
shallot/backend/src/app/services/: __init__.py  chat_permissions.py  chat_users.py  settings.py  users.py
shallot/backend/tests/: __init__.py  conftest.py  test_alerts_command.py  test_auth_api.py  test_auth_api_fixed.py  test_chat_manager.py  test_chat_permissions.py  test_chat_permissions_complete.py  test_chat_services.py  test_chat_users_service.py  test_chat_users_service_complete.py  test_commands_core.py  test_database.py  test_db_integration.py  test_decorators.py  test_escalate.py  test_main.py  test_matrix.py  test_permissions.py  test_plan.md  test_progress.md  test_security.py  test_securityonion.py  test_securityonion_complete.py  test_securityonion_enhanced.py  test_settings_api.py  test_settings_model.py  test_settings_service.py  test_settings_service_complete.py  test_users_api.py  test_users_service.py  test_validation.py  utils.py
(+120 files in other folders)
